--- a/css/card-geometry.css
+++ b/css/card-geometry.css
@@ -180,9 +180,9 @@ img.art.vertical {
 
 span.art-credits {
     bottom: 0;
-    left: calc(var(--fullwidth-margin) + var(--pin-line-width));
+    left: calc(3*var(--fullwidth-margin) + var(--halfwidth-box));
+    border: 0 none transparent;
     background-color: transparent;
-    font-size: var(--art-credit-font-size);
 }
 
 span.art-credits::before {
@@ -192,7 +192,7 @@ span.art-credits::before {
 /* TEXT CONTENT */
 
 div.text-box>hr {
-    width: 70%;
+    width: 80%;
     border-bottom: none;
     border-left: none;
     border-right: none;
@@ -217,6 +217,15 @@ div.text-box.dense>p {
     margin: 1mm 1mm 0mm;
 }
 
+div.text-box.compact>p {
+    margin: 0.5mm 1mm 0mm;
+}
+
+div.text-box.compact>hr {
+    margin: 0.5mm auto 0mm;
+    border-top-width: calc(var(--pin-line-width)/2);
+}
+
 div.text-box.sparse {
     justify-content: center;
 }
@@ -226,7 +235,8 @@ div.text-box.sparse>p {
     text-align: center;
 }
 
-div.text-box.dense {
+div.text-box.dense,
+div.text-box.compact {
     padding: 0;
     display: flex;
     flex-direction: column;
