--- a/css/monochrome.css
+++ b/css/monochrome.css
@@ -24,16 +24,77 @@
 
 .ms-cost,
 .ms-cost.ms-w,
-.ms-cost.ms-wp,
 .ms-cost.ms-u,
-.ms-cost.ms-up,
 .ms-cost.ms-b,
-.ms-cost.ms-bp,
 .ms-cost.ms-r,
-.ms-cost.ms-rp,
-.ms-cost.ms-g,
-.ms-cost.ms-gp {
+.ms-cost.ms-g {
     background-color: white;
+}
+
+.ms-cost.ms-wp::before,
+.ms-cost.ms-up::before,
+.ms-cost.ms-rp::before,
+.ms-cost.ms-bp::before,
+.ms-cost.ms-gp::before {
+    top: -0.38em;
+    left: 0.28em;
+    content: "\e618";
+    font-size: 0.55em !important;
+    position: absolute;
+}
+
+.ms-cost.ms-wp::after,
+.ms-cost.ms-up::after,
+.ms-cost.ms-rp::after,
+.ms-cost.ms-bp::after,
+.ms-cost.ms-gp::after {
+    top: 0.5em;
+    left: 1em;
+    font-size: 0.55em !important;
+    position: absolute;
+}
+
+.ms-cost.ms-wp::after {
+    content: "\e600";
+}
+
+.ms-cost.ms-up::after {
+    content: "\e601";
+}
+
+.ms-cost.ms-bp::after {
+    content: "\e602";
+}
+
+.ms-cost.ms-rp::after {
+    content: "\e603";
+}
+
+.ms-cost.ms-gp::after {
+    content: "\e604";
+}
+
+.ms-cost.ms-wu,
+.ms-cost.ms-ub,
+.ms-cost.ms-br,
+.ms-cost.ms-rg,
+.ms-cost.ms-gw,
+.ms-cost.ms-wb,
+.ms-cost.ms-bg,
+.ms-cost.ms-gu,
+.ms-cost.ms-ur,
+.ms-cost.ms-rw,
+.ms-cost.ms-2w,
+.ms-cost.ms-2u,
+.ms-cost.ms-2r,
+.ms-cost.ms-2b,
+.ms-cost.ms-2g,
+.ms-cost.ms-wp,
+.ms-cost.ms-up,
+.ms-cost.ms-rp,
+.ms-cost.ms-bp,
+.ms-cost.ms-gp {
+    background: linear-gradient(135deg, white 0%, white 49%, black 49%, black 52%, white 52%, white 100%);
 }
 
 .ms-cost.ms-shadow {
