--- a/css/card-geometry.css
+++ b/css/card-geometry.css
@@ -62,14 +62,16 @@ div.card::after {
     text-align: center;
 }
 
+div.card::before {
+    top: calc(-1*var(--card-corner-radius) + var(--card-border)/2 + var(--proxy-mark-nudge));
+    content: "PROXY";
+}
+
 div.card::after {
     bottom: calc(-1*var(--card-corner-radius) + var(--card-border)/2 - var(--proxy-mark-nudge));
     content: "PROXY";
 }
 
-div.card::before {
-    top: calc(-1*var(--card-corner-radius) + var(--card-border)/2 + var(--proxy-mark-nudge));
-}
 
 /* CARD PARTS */
 
